--- a/ecommerce/store/templates/store/base.html
+++ b/ecommerce/store/templates/store/base.html
@@ -77,9 +77,9 @@
                         
                         {% for category in categories %}
                         <li>                       
-                            
-                            <a class="dropdown-item" href=""> {{category.name | capfirst}} </a>
-                        
+
+                            <a class="dropdown-item" href="{{ category.get_absolute_url }}"> {{ category.name | capfirst }} </a>
+
                         </li>
         
                         {% endfor %}
