--- a/ecommerce/store/templates/store/product-info.html
+++ b/ecommerce/store/templates/store/product-info.html
@@ -108,7 +108,7 @@
                 action: 'post'
             },
             success: function(json) {
-                
+                console.log(json);
             },
             error: function(xhr, errmsg, err) {
                
