--- a/ecommerce/store/templates/store/base.html
+++ b/ecommerce/store/templates/store/base.html
@@ -1,3 +1,4 @@
+
 {% load static %}
 
 <!DOCTYPE html>
@@ -120,7 +121,16 @@
 
 
                         <i class="fa fa-shopping-cart" aria-hidden="true"> </i>
-
+                        &nbsp;
+                      <div id="cart-qty" class="d-inline-flex">
+                      {% with cart|length as qty_amount %}
+                       {% if qty_amount > 0 %}
+                          {{ qty_amount }}
+                       {% else %}
+                        0
+                       {% endif %}
+                      {% endwith %}
+    </div>
 
                     </a>
 
