--- a/ecommerce/store/templates/store/product-info.html
+++ b/ecommerce/store/templates/store/product-info.html
@@ -108,7 +108,8 @@
                 action: 'post'
             },
             success: function(json) {
-                console.log(json);
+               
+                document.getElementById("cart-qty").innerHTML = json.qty;
             },
             error: function(xhr, errmsg, err) {
                
